# hatch-protobuf

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/hatch_protobuf/: __init__.py  hooks.py  plugin.py
tests/: conftest.py  consumer.proto  helloworld.proto  test_plugin.py
